# Coding-Challenge

backend/: .gitignore  database.db  pyproject.toml  requirements.txt  server.py  uv.toml
backend/src/: ai_generator.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py
frontend/: index.html
frontend/src/: App.css  App.jsx
frontend/src/auth/: ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/components/: ThemeToggle.jsx
frontend/src/layout/: Layout.jsx
